# lua-windows-binaries

./: README.md
lua5.4-bin-x64/: Lua.lib
src/lua-5.4/: .gitignore  CMakeLists.txt  luac.c
src/lua-5.4/testes/: all.lua  main.lua
src/lua-5.4/testes/libs/: CMakeLists.txt
src/luasec-master/: .gitignore  luasec.sln  luasec.vcxproj
src/luasocket-3.1.0/: .gitignore  mime.vcxproj  socket.vcxproj
